# afterburner-cfd

./: Dockerfile  PROJECT_SUMMARY.md  README.md  USER_MANUAL.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  python-ci.yml
demo/: demo.py
report/: afterburner_cfd_report.tex
src/: boundary_conditions.py  cli.py  compressible_ns_solver.py  gmsh_exporter.py  heat_profile_plugin.py  main.py  mesh2d.py  ns_solver_config.py  optimizer.py  plots.py  post_processing.py  rayleigh_solver.py  run_parameter_study.py  streamlit_app.py  utils.py  webapp.py
src/validation/: __init__.py  experimental_comparison.py  requirements.txt  test_validation.py  textbook_cases.py  validation_metrics.py  validation_plots.py
test_data/: experimental_data.json
test_results/experimental/: validation_report.txt
test_results/textbook/: textbook_validation_summary.txt
tests/: test_heat_profile.py  test_rayleigh_solver.py  test_shock_detection.py  test_validation_metrics.py
